--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+        <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
       <nav class="main-navigation">
         <ul class="site-navigation">
@@ -33,12 +33,12 @@
       <section class="product-photos">
         <h2 class="visually-hidden">Изображения товара</h2>
         <p class="product-photo-full">
-          <img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
+          <img src="img/item-big.jpg" width="460" height="498" alt="Фото всего набора">
         </p>
         <ul class="product-photo-preview">
-          <li><img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас"></li>
-          <li><img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
-          <li><img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>
+          <li><img src="img/item2.jpg" width="140" height="149" alt="Фото в анфас"></li>
+          <li><img src="img/item3.jpg" width="140" height="149" alt="Фото в профиль"></li>
+          <li><img src="img/item4.jpg" width="140" height="149" alt="Фото отдельной части"></li>
         </ul>        
       </section>
       <section class="product-info">
